--- a/volume/squid/squid.conf
+++ b/volume/squid/squid.conf
@@ -2103,7 +2103,9 @@ http_access deny all
 #
 
 # Squid normally listens to port 3128
-http_port 3128
+http_port 3128 # default
+http_port squid:3129 tls-cert=/etc/squid/ssl_cert/proxyCA.pem
+https_port squid:3130 tls-cert=/etc/squid/ssl_cert/proxyCA.pem
 
 #  TAG: https_port
 #	Usage:  [ip:]port [mode] tls-cert=certificate.pem [options]
@@ -2808,6 +2810,7 @@ http_port 3128
 #	See also: sslproxy_flags and DONT_VERIFY_PEER.
 #Default:
 # Server certificate errors terminate the transaction.
+sslproxy_cert_error allow all
 
 #  TAG: sslproxy_cert_sign
 # Note: This option is only available if Squid is rebuilt with the
@@ -4869,6 +4872,7 @@ http_port 3128
 #	events affecting Squid.
 #Default:
 # Log all critical and important messages.
+debug_options ALL #modified
 
 #  TAG: coredump_dir
 #	By default Squid leaves core files in the directory from where
@@ -5918,6 +5922,9 @@ refresh_pattern .		0	20%	4320
 #	By default, all headers are allowed (no anonymizing is performed).
 #Default:
 # No limits.
+request_header_access X-Forwarded-For deny all
+request_header_access via deny all
+request_header_access if-modified-since deny all
 
 #  TAG: reply_header_access
 #	Usage: reply_header_access header_name allow|deny [!]aclname ...
@@ -7650,6 +7657,7 @@ refresh_pattern .		0	20%	4320
 #	See http://wiki.squid-cache.org/SquidFaq/SquidAcl for details.
 #Default:
 # Prevent any cache_peer being used for this request.
+always_direct allow all
 
 #  TAG: never_direct
 #	Usage: never_direct allow|deny [!]aclname ...
