--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,36 @@ services:
       - ".:/home/app"
     working_dir: "/home/app"
     command:
-      ["npm", "run", "exec"]
+      ["npm", "run", "run:tester"]
     environment:
-      http_proxy: "http://squid:3128"
-      https_proxy: "http://squid:3128"
+      TZ: "Asia/Seoul"
+      #http_proxy: "http://squid:3128" # OS proxy mode
+      #https_proxy: "https://squid:3130" # OS proxy mode
+      APP_HTTP_PROXY: "http://squid:3128" # APP proxy mode
+      APP_HTTPS_PROXY: "https://squid:3130" # APP proxy mode
     depends_on:
       - squid
+      - dummy-server
   squid:
     image: ubuntu/squid
     environment:
-      TZ: "UTC"
+      TZ: "Asia/Seoul"
     ports:
       - "3128:3128"
+      - "3129:3129"
+      - "3130:3130"
     volumes:
-      - "./volume/log:/var/log/squid" # Volume to store squid logs
-      - "./volume/spool:/var/spool/squid" # Volume to store the squid cache
-      - "./volume/squid.conf:/etc/squid/squid.conf" # Main squid configuration file
-      #- "./volume/snippet.conf:/etc/squid/conf.d/snippet.conf" # Configuration snippets included by squid.conf
+      #- "./volume/squid/log:/var/log/squid" # Volume to store squid logs
+      #- "./volume/squid/spool:/var/spool/squid" # Volume to store the squid cache
+      - "./volume/squid/squid.conf:/etc/squid/squid.conf" # Main squid configuration file
+      #- "./volume/squid/snippet.conf:/etc/squid/conf.d/snippet.conf" # Configuration snippets included by squid.conf
+      - "./volume/squid/ssl:/etc/squid/ssl_cert"
+  dummy-server:
+    image: node:16-alpine
+    volumes:
+      - ".:/home/app"
+    working_dir: "/home/app"
+    command:
+      ["npm", "run", "run:server"]
+    environment:
+      TZ: "Asia/Seoul"
