--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "exec": "node index.js"
+    "run:tester": "node index.js",
+    "run:server": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
